--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fast-glob": "^3.3.3",
     "lucide-react": "^0.541.0",
     "next": "15.5.0",
     "next-seo": "^6.8.0",
